--- a/src/languages/en-US/Everyone/playlist.json
+++ b/src/languages/en-US/Everyone/playlist.json
@@ -13,14 +13,13 @@
 
 	"EMBED_NO_PLAYLIST_DESC": "Could not find any playlists.",
 	"EMBED_SHOW_CURRENT_PAGE": "Page {{CURRENT}}/{{TOTAL}} | {{SIZE}} songs | {{DURATION}} total duration",
-	"EMBED_NO_PLAYLISTNAME_FOUND": "Could not find a playlist named {{PLAYLISTNAME}}",
-	"EMBED_CREATED_NEW_DEFAULT": "Created your default playlist with the name {{NAME}}.\nPlease run this command again.",
 	"EMBED_REACHED_MAX_AMMOUNT": "You reached the maximum amount of tracks in your playlist.",
 	"EMBED_NO_SONGS_FOUND": "Could not find any songs.",
-	"EMBED_SONGSAVE_LOADED": "Successfully added 1 track from {{NAME}}",
-	"EMBED_AT_LEAST_1SONG": "Please provide 1 song to save.",
-	"EMBED_ADDED_TRACK_TO_PLAYLIST": "Successfully added track {{TRACK}} to the playlist {{PLAYLISTNAME}}",
-	"EMBED_REMOVED_TRACK_FROM_PLAYLIST": "Successfully removed song at position {{SONGID}}",
+	"EMBED_SONGSAVE_LOADED": "Successfully added `1` track from `{{NAME}}`",
+	"EMBED_ONLY_1SONG": "Please only provide `1` song and not a playlist.",
+	"EMBED_ADDED_TRACK_TO_PLAYLIST": "Successfully added track `{{TRACK}}` to the playlist `{{PLAYLISTNAME}}`",
+	"EMBED_REMOVED_TRACK_FROM_PLAYLIST": "Successfully removed song `{{SONGTITLE}}` at position `{{SONGID}}`",
+	"EMBED_TRACK_NOT_EXIST_IN_PLAYLIST": "The track you are trying to remove does not exist in your playlist.",
 	"EMBED_NOT_A_DJ": "You are not a DJ in this server.",
 	"EMBED_NOT_VC": "You have to join a voice channel first.",
 	"EMBED_NOT_SAME_VC": "I'm already playing in a different voice channel!",
@@ -28,16 +27,19 @@
 	"EMBED_COULDNT_FIND_DEFAULT": "Error finding your default playlist.",
 	"EMBED_LOADING_PLAYLIST_TITLE": "Loading tracks",
 	"EMBED_LOADING_PLAYLIST_DESC": "This might take a while...",
-	"EMBED_LOADED_PALYLIST": "{{SIZE}} tracks queued from {{PLAYLISTNAME}}",
+	"EMBED_LOADED_PALYLIST": "`{{SIZE}}` tracks queued from `{{PLAYLISTNAME}}`",
 	"EMBED_REQUIRES_PREMIUM": "This command requires a premium subscription!",
 	"EMBED_COULDNT_FIND_PLAYLIST": "Error finding your playlist.",
 	"EMBED_BOT_NOT_PLAYING": "The bot is currently not playing.",
 	"EMBED_NO_SONG_IN_QUEUE": "There is currently no song in the queue.",
 	"EMBED_ERROR_CREATING_PLAYLIST": "Error creating your playlist.",
-	"EMBED_SAVED_CURRENT_QUEUE_AS_PLAYLIST": "Successfully added {{SIZE}} songs to your playlist {{PLAYLISTNAME}}",
+	"EMBED_SAVED_CURRENT_QUEUE_AS_PLAYLIST": "Successfully added `{{SIZE}}` songs to your playlist `{{PLAYLISTNAME}}`",
+	"EMBED_ERROR_SAVING_TO_PLAYLIST": "Error saving current queue to your playlist.",
 	"EMBED_ERROR_DELETING_PLAYLIST": "Error deleting your playlist.",
-	"EMBED_SUCCESS_CREATING_PLAYLIST": "Successfully created your playlist: {{PLAYLISTNAME}}",
-	"EMBED_SUCCESS_DELETING_PLAYLIST": "Successfully deleted your playlist {{PLAYLISTNAME}}",
-	"EMBED_UPDATED_DEFAULT_PLAYLIST": "Updated your default playlist to {{PLAYLISTNAME}}",
-	"EMBED_SHARE_PLAYLIST": "Playlist {{PLAYLISTNAME}} can be shared via `/playlist load _id:{{ID}}`"
+	"EMBED_SUCCESS_CREATING_PLAYLIST": "Successfully created your playlist: `{{PLAYLISTNAME}}`",
+	"EMBED_SUCCESS_DELETING_PLAYLIST": "Successfully deleted your playlist `{{PLAYLISTNAME}}`",
+	"EMBED_UPDATED_DEFAULT_PLAYLIST": "Updated your default playlist to `{{PLAYLISTNAME}}`",
+	"EMBED_SHARE_PLAYLIST": "Playlist `{{PLAYLISTNAME}}` can be shared via `/playlist load _id:{{ID}}`",
+	"EMBED_PLAYLIST_EMPTY": "It appears your playlist ist empty. Add songs by typing `/playlist song-save <title/url> <playlist-name>`",
+	"LIST_PLAYLISTS": "created"
 }
